--- a/helm/petclinic/templates/petclinic-memoery-hpa.yaml
+++ b/helm/petclinic/templates/petclinic-memoery-hpa.yaml
@@ -6,7 +6,7 @@ spec:
  maxReplicas: 3
  minReplicas: 1
  scaleTargetRef:
-   apiVersion: extensions/v1beta1
+   apiVersion: apps/v1
    kind: Deployment
    name: petclinic-deployment
  metrics:
